--- a/index.css
+++ b/index.css
@@ -4,12 +4,27 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+ul {
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
+}
+
+li {
+    margin-top: 5px;
+}
+
+li a {
+    color: #5f9341
+}
+
 input {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
     margin-bottom: 4px;
 }
+
 button {
     color: white;
     background-color: #5f9341;
