--- a/index.css
+++ b/index.css
@@ -30,7 +30,11 @@ button {
     color: white;
     background-color: #5f9341;
     padding: 10px 20px;
-    border: none; 
+    border: 1px solid #5f9341;
     font-weight: bold;
-    
+}
+
+#delete-btn {
+    background: white;
+    color: #5f9341;
 }
